test/tests/operators/from_splunk/error_variable_realtime_time_bound.txt
error: real-time Splunk searches are not supported
 --> tests/operators/from_splunk/error_variable_realtime_time_bound.tql:9:12
  |
9 |   earliest=$earliest,
  |            ^^^^^^^^^ `earliest` uses a real-time bound
  |
  = note: use a finite time bound instead
